[project]
name = "market-pricing-engine"
version = "0.1.0"
description = "Reusable price fetcher and ISIN-symbol mapper for Indian equities and mutual funds"
authors = [{ name="Vivek", email="your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "yfinance",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
